[gd_scene load_steps=7 format=3 uid="uid://ctow5dh60gvg4"]

[ext_resource type="Script" uid="uid://c3yehy4r7k132" path="res://src/player/player.gd" id="1_gmfve"]
[ext_resource type="Texture2D" uid="uid://cql8n5gppr5gy" path="res://assets/hw_geeko_pixel.png" id="2_rxibo"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lowyb"]
radius = 23.0
height = 96.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gmfve"]
bg_color = Color(0, 0, 0, 1)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ehvfd"]
bg_color = Color(0.9192808, 4.47616e-06, 1.1551381e-06, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gmfve"]
radius = 32.0
height = 116.0

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_gmfve")

[node name="PlayerSprite" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(-1, -64)
texture = ExtResource("2_rxibo")

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2(-2, -23)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_lowyb")

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -75.0
offset_top = 10.0
offset_right = 75.0
offset_bottom = 24.04
theme_override_styles/background = SubResource("StyleBoxFlat_gmfve")
theme_override_styles/fill = SubResource("StyleBoxFlat_ehvfd")
value = 100.0
show_percentage = false

[node name="DamageArea" type="Area2D" parent="."]
position = Vector2(23.400002, -0.1499939)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(-24.400002, -22.850006)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_gmfve")
debug_color = Color(0.83102524, 0.33544555, 0.5368337, 0.41960785)

[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
[connection signal="body_exited" from="DamageArea" to="." method="_on_damage_area_body_exited"]
